--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "final-module-exercise-1",
+  "name": "project1",
   "version": "0.0.1",
   "description": "Basic web",
   "main": "index.js",
